2011-07-24  Jim Larus  <jim@linuxPC>

	* Version 9.1.3

	* bin/release-debian:
	Parameterize for x64 linux.

2011-07-23  Jim Larus  <jim@linux64>

	* xspim/buttons.c:
	Changes to satisfy C++'s stricter typing rules.

2011-07-23    <Jim@X64PC>

	* QtSpim/menu.cpp (help_AboutSPIM) [Sergio Barrachina Mir <barrachi@icc.uji.es>]:
	Improve the About QtSpim dialog.

	* QtSpim/regwin.cpp (changeValue):
	Suppress compiler warning.

	* QtSpim/QtSpim.pro:
	Generate compressed helpfile and help collection separately to
	work around bug in buildhelpcollection's -o argument.

2011-07-22    <Jim@X64PC>

	* Version 9.1.2

	* pervasive:
	Changed C code to use bool instead of int to make things clear,
	although no longer vanilla C code.

	* QtSpim/datawin.cpp [William A. Barrett wbarrett1076@comcast.net]:
	Fix data segment display to show ASCII chars on a partial line.
	Only display printable ASCII chars.


2011-07-21    <Jim@X64PC>

	* Version 9.1.1

	* QtSpim/console.cpp, 	QtSpim/console.h, QtSpim/datatextedit.h,
	QtSpim/datawin.cpp, QtSpim/regtextedit.h, 	QtSpim/regwin.cpp,
	QtSpim/spimview.cpp, QtSpim/spimview.ui, QtSpim/texttextedit.h,
	QtSpim/textwin.cpp [Mario H. Voorsluys m.h.voorsluys@student.tudelft.nl]:
	Closing a window did not uncheck item on Windows menu.
	Eliminated empty toolbar.

2011-07-20    <Jim@X64PC>

	* QtSpim/breakpoint.ui QtSpim/menu.cpp, QtSpim/spimview.h, QtSpim/spimview.cpp [William Barrett wbarrett1076@comcast.net]:
	Provide more usable set of options at a breakpoint.

2011-07-18    <Jim@X64PC>

	* Version 9.1

2011-07-18  Jim Larus  <jim@linuxPC>

	* Setup/qtspim_debian_deployment/postinst:
	Register QtSpim help file after installation.

2011-07-17    <Jim@X64PC>

	* Setup/QtSpim_Win_Deployment/QtSpim-package.sln:
	Fixed VS deployment package to register/unregister help file when
	installing on new machine.
	Added image rendering plugins for jpegs.

	* main.cpp, menu.cpp, spimview.cpp, spimview.h, state.cpp:
	Added command line parsing to QtSpim.
